# alice

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml
.github/workflows/: main.yml
alice/: agent.py  config.py  log.py  main.py
