[tool.poetry]
name = "alice"
version = "0.1.0"
description = "AI-powered Command Line Tool"
authors = ["CT Wu <ct@shopline.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
autogen-agentchat = "^0.5.6"
autogen-ext = {extras = ["diskcache", "openai", "ollama"], version = "^0.5.6"}
dotenv = "^0.9.9"
aiofiles = "^24.1.0"
diskcache = "^5.6.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
